testdata/baselines/reference/submodule/conformance/optionalBindingParameters4.errors.txt
/a.js(2,11): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /** 
    * @param {{ cause?: string }} [options] 
              ~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    */ 
    function foo({ cause } = {}) {
        return cause;
    }
    